--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fi
 
 <!-- SERVICIOS -->
     <section id="servicios" class="seccion">
-        <h2>Servicios SYSTEM FLASH</h2>
+       <h2 style="color: black;">Servicios SYSTEM FLASH</h2>
 
         <div class="services">
       <!-- PÁGINAS WEB -->
@@ -584,3 +584,4 @@ ${datos.mensaje}
  <footer>  © 2025  SYSTEM FLASH  — Innovación sin límites </footer>
 </body>
 </html>
+
