--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> SYSTEMFLASH5 | Tecnología</title>
+<title> SYSTEMFLASH5 | Tecnología </title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
@@ -42,12 +42,12 @@ nav a:hover{opacity: 0.3;}
 .hero h2{font-size:48px;margin-bottom:20px}
 .hero p{font-size:18px;opacity:.9;margin-bottom:30px}
 .hero button{
-  padding:14px 30px;
+  padding:1px 5px;
   border:none;
-  border-radius:30px;
-  background:#88b410;
+  border-radius:10px;
+  background:#ffb406;
   color:#fff;
-  font-size:16px;
+  font-size:50px;
   cursor:pointer;
 }
 .hero button:hover{background:#0066cc}
@@ -137,7 +137,7 @@ nav a:hover{opacity: 0.3;}
 
 /* Cinta diagonal */
 .ribbon{ background: rgb(239, 40, 1); color: rgb(255, 255, 255); top: 50%; left: 60px; width: 300px;
-    padding: 40px 0; font-weight: bold; text-align: center; font-size: 16px; transform: rotate(-25deg); 
+    padding: 20px 0; font-weight: bold; text-align: center; font-size: 16px; transform: rotate(-25deg); 
     }
 
 /* FOOTER */
@@ -165,41 +165,25 @@ footer{
 
 <header>
 <img src="logo2.jpeg" alt="Logo">
-  
-
 <nav class="apple-menu">
   <a href="#inicio"><i class="fa-regular ">🏠</i><span>Inicio</span></a>
   <a href="#productos"><i class="fa-regular ">📦</i><span>Productos</span></a>
   <a href="#servicios"><i class="fa-regular ">⚙️</i><span>Servicios</span></a>
-  <a href="#contacto"><i class="fa-regular ">👨‍💼</i><span>Soporte/Atención</span></a>
+  <a href="#contacto"><i class="fa-regular ">👨‍💼</i><span>Soporte|Atención</span></a>
 </nav>
 
 <style>
-.apple-menu{
-  display:flex;
-  gap:26px;
-}
-.apple-menu a{
-   color:#000000;
-  margin-left:15px;
-  text-decoration:none;
-  font-weight:500;
-}
-.apple-menu i{
-  font-size:20px;
-  display:block;
-  margin-bottom:4px;
-  text-align: center;
-}
+.apple-menu{ display:flex; gap:26px;}
+.apple-menu a{ color:#000000; margin-left:15px; text-decoration:none; font-weight:500;}
+.apple-menu i{ font-size:20px; display:block; margin-bottom:4px;text-align: center;}
 </style>
-
 </header>
 
 <section class="hero" id="inicio">
   <div>
     <h2>Innovación que impulsa tu NEGOCIO</h2>
     <p>Desarrollamos soluciones tecnológicas modernas para empresas, negocios y emprendedores.</p>
-    <button>🕘 Proximo Tienda 🕘</button>
+    <button><a href="tienda.html" >🛍️</a></button><br><b style=" padding: 15px; " >Tienda</b>
   </div>
   <img src="https://images.unsplash.com/photo-1518770660439-4636190af475" alt="Tecnología">
 </section>
@@ -241,7 +225,7 @@ footer{
   <center><table border="0" >
     <tr><td style="padding: 15px;">
   <ul class="lista">
-    <h4 style="padding: 15px;">Soporte/Reparacion</h4>
+    <h4 style="padding: 15px;">Soporte | Reparacion</h4>
     <li>🔧 Mantenimiento 🔧 </li>
    <li>🚀 Optimización  🚀</li>
     <li>📹 Camaras de Seguridad  📹</li>
@@ -250,7 +234,7 @@ footer{
   <!--servicios 2 -->
     <td >
   <ul class="lista">
-    <h4 style="padding: 15px;">Desarrollo/Creacion</h4>
+    <h4 style="padding: 15px;">Desarrollo | Creacion</h4>
     
     <li>🖥️ Puntos de Venta 🖥️</li>
     <li>⚙️ Sistema de administracion ⚙️ </li>
@@ -261,7 +245,7 @@ footer{
   <!--servicios 3 -->
    <td style="padding: 15px;">
   <ul class="lista">
-<h4 style="padding: 15px;"> Productos/Tienda </h4>
+<h4 style="padding: 15px;"> Productos | Tienda </h4>
     <li>🧩 Accesorios    🧩</li>
     <li>💻 Computadoras  🖥️</li>
     <li>🛒 Tienda       🛒</li>
@@ -279,15 +263,15 @@ footer{
    
       <!-- INFO -->
       <aside class="contact-info" >
-        <h2> Soporte / Informes </h2>
+        <h2> Soporte | Informes </h2>
         <br>
         <p><strong>📞 Soporte:📞</strong> <a style="color: red;" href="tel:+5256-4154-6456"> 56-4154-6456</a></p>
          <br>
         <p><strong>📧 Correo:📧 </strong> <a style="color: red;" href="mailto:sstmflash@gmail.com">sstmflash@gmail.com</a></p>
         <br>
-        <p><strong>📍 Soporte Técnico:📍</strong> En línea /México</p>
+        <p><strong>📍 Soporte Técnico:📍</strong> En línea | México</p>
         <br>
-        <p><strong>📍 Atención al Cliente:📍</strong> En línea /México</p>
+        <p><strong>📍 Atención al Cliente:📍</strong> En línea | México</p>
         <br>
         <p><strong>🕒 Horario:🕒</strong> Lunes a Sábado, 9:00 AM – 6:00 PM</p>
         <br>
@@ -351,7 +335,7 @@ footer{
     <br>
     <br>
     <br>
-<footer id="contacto"> ©  2026  SYSTEM FLASH  —  Innovación sin límites</footer>
+<footer id="contacto"> ©  2026  SYSTEMFLASH5 | Servicios - Todos los derechos reservados</footer>
 
 
 <script>
@@ -537,5 +521,3 @@ const url = "https://wa.me/5215641546456?text=" + encodeURIComponent(texto);
 </script>
 </body>
 </html>
-
-
